[package]
name = "bevy_try_outs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = [
    "dynamic_linking",
] } # make this the latest
[profile.release]
lto = "thin" # unnesscary but will boost performance for release builds however compile times will be slower
[profile.dev]
opt-level = 1 # set to 0 if debugging will mess with line of codes being skipped
[profile.dev.package."*"]
opt-level = 3

